# tc-sqlite

./: .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md
cmk/: Config.cmake.in
doc/: LICENSE.txt  README.md
src/: CMakeLists.txt
src/sqlite/: CMakeLists.txt
src/sqlitecpp/: CMakeLists.txt  Sqlite.cc  Sqlite.hh  SqliteUtils.cc  SqliteUtils.hh
tst/: CMakeLists.txt
tst/sqlitecpp/: CMakeLists.txt  Main_t.cc  Sqlite_t.cc
